--- a/src/styles1.css
+++ b/src/styles1.css
@@ -1,18 +1,24 @@
-.topcontainer {
+.weather-app-wrapper {
+  margin: 0 auto;
   max-width: 600px;
-  margin: 30px auto;
   padding: 20px;
+}
+.weather-app {
   border: 1px solid gray;
   border-radius: 10px;
+  padding: 20px;
 }
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: gray;
-  font-size: 24px;
+  color: rgb(91, 90, 90);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   margin-bottom: 0;
 }
+.header,
+.row {
+  color: gray;
+}
+
 ul {
   list-style-type: none;
   padding: 0;
-  color: gray;
 }
