--- a/src/styles1.css
+++ b/src/styles1.css
@@ -22,3 +22,19 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+img {
+  float: left;
+  margin-right: 10px;
+}
+
+#number {
+  font-size: 36px;
+  font-weight: 700;
+}
+#units {
+  position: relative;
+  top: -20px;
+  left: -3px;
+  font-size: 15px;
+}
