modified:   .DS_Store 	deleted:    .gitattributes 	renamed:    index1.html -> index.html 	modified:   src/app.js 	renamed:    src/styles1.css -> src/styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,18 @@ img {
   left: -3px;
   font-size: 15px;
 }
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.search-form form {
+  width: 100%;
+  display: flex;
+}
+
+.search-form input {
+  flex: 1;
+}
