--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   border: 1px solid gray;
   border-radius: 10px;
   padding: 20px;
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
 }
 h1 {
   color: rgb(91, 90, 90);
@@ -49,8 +50,12 @@ img {
 .search-form form {
   width: 100%;
   display: flex;
+  margin: 0 auto 10px auto;
 }
 
 .search-form input {
   flex: 1;
+}
+button {
+  margin: 3px;
 }
