--- a/src/styles.css
+++ b/src/styles.css
@@ -67,3 +67,21 @@ button {
   left: 10px;
   top: -5px;
 }
+
+.weather-roll {
+  margin-top: 20px;
+}
+.col-2 {
+  font-size: 16px;
+  text-align: center;
+}
+
+p {
+  font-weight: bold;
+  margin-left: 12px;
+}
+.max-temp {
+  font-weight: bold;
+  color: rgb(73, 73, 73);
+  margin-left: 3px;
+}
